// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spinner > match circle snapshot 1`] = `
<div>
  <span
    class="loading loading-spinner text-blue-700 loading-spinner loading-lg"
  />
</div>
`;

exports[`Spinner > match dots snapshot 1`] = `
<div>
  <span
    class="loading loading-spinner text-blue-700 loading-dots loading-lg"
  />
</div>
`;
